# medelite-report-gen

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Makefile  NOTICE.md  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  models.py
backend/app/api/: routes.py
backend/app/core/: config.py  errors.py
backend/app/exports/: docx.py  pdf.py  shared.py
backend/app/providers/: case_reference.py  cms.py
backend/tests/: conftest.py  test_cms.py  test_exports.py  test_health.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/export/docx/: route.ts
frontend/app/api/export/pdf/: route.ts
frontend/app/api/lookup/: route.ts
frontend/components/: ExportBar.tsx  FacilityForm.tsx  MetricCards.tsx  ReportPreview.tsx
frontend/lib/: api.ts  types.ts
frontend/lib/server/: cms.ts  report.ts
frontend/tests/: FacilityForm.test.tsx  ReportPreview.test.tsx  reportRows.test.ts
