[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medelite-report-gen-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.2.1",
  "python-docx>=1.1.2",
  "reportlab>=4.2.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "anyio>=4.4.0",
  "black>=24.4.2",
  "mypy>=1.10.0",
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.4.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
plugins = []
strict = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
